--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "cmp"
+name = "cmpal"
 version = "0.1.0"
 description = ""
 authors = [
@@ -8,12 +8,16 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "black (>=25.1.0,<26.0.0)",
-    "isort (>=6.0.0,<7.0.0)",
-    "autoflake (>=2.3.1,<3.0.0)"
-]
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.8.0"
+isort = "^6.0.0"
+autoflake = "^2.3.1"
+
+
+[tool.poetry.dependencies]
+setuptools = "^75.8.0"
 [tool.black]
 line-length = 100
 
@@ -24,6 +28,8 @@ multi_line_output = 3
 profile = "black"
 include_trailing_comma = true
 
+[tool.poetry.scripts]
+cmpal = "cmpal.main:main" 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
