--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     {name = "suveenE",email = "suveen.ellawela@u.nus.edu"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12, <4.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -18,6 +18,8 @@ autoflake = "^2.3.1"
 
 [tool.poetry.dependencies]
 setuptools = "^75.8.0"
+pydantic = "^2.10.6"
+simple-term-menu = "^1.6.6"
 [tool.black]
 line-length = 100
 
