--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     {name = "suveenE",email = "suveen.ellawela@u.nus.edu"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -18,6 +18,7 @@ autoflake = "^2.3.1"
 
 [tool.poetry.dependencies]
 setuptools = "^75.8.0"
+ollama = "^0.4.7"
 [tool.black]
 line-length = 100
 
